# generic_python_layout

./: LICENSE  README.md  pyproject.toml
src/: calc.py
tests/: test_calc.py
